--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-:root {
-    --text-color: #DBE4EF;
+:root{
+    --text-color: #dbe4ef;
     --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --card-back-color: #00f4bf;
 }
 
 body{
-    background-image: url(img/bg-desktop.webp);
+    background-image: url(img/bg-desktop.jpg);
     font-family: Bai Jamjuree;
 }
 
@@ -19,19 +19,23 @@ body{
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
 }
+
 .cartao_conteudo{
     text-align: center;
     background-color: var(--card-front-color);
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
 .cartao_conteudo p{
     margin-top: 1rem;
     padding: 2rem;
+    margin-top: 4rem;
 }
 
 .cartao_conteudo h3{
-    COLOR: var(--text-color);
+    color: var(--text-color);
     border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
@@ -39,7 +43,9 @@ body{
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
+
 .cartao_conteudo_pergunta p{
     color: var(--text-color);
     font-weight: 500;
@@ -48,6 +54,23 @@ body{
 .cartao_conteudo_resposta p{
     color: var(--card-back-color);
     font-weight: 700;
+}
+
+
+.cartao:hover .cartao_conteudo{
+    transform: rotateY(180deg);
+}
+
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta{
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.cartao_conteudo_resposta{
+    transform: rotateY(180deg);
 }
 
 footer{
