--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ footer p{
 
 @media (max-width: 560px){
     body{
-        background: url(img/bg-mobile.webp);
+        background: url(img/bg-mobile.jpg);
     }
 
     .cartao{
@@ -206,7 +206,7 @@ footer p{
 
 @media (max-width: 560px){
     body{
-        background: url(img/bg-mobile.webp);
+        background: url(img/bg-mobile.jpg);
     }
 
     .cartao{
